--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@chakra-ui/theme-tools": "^2.0.2",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.9.0",
+    "@nivo/core": "0.78.0",
+    "@nivo/line": "0.78.0",
+    "@nivo/pie": "0.78.0",
     "framer-motion": "^6.3.0",
     "next": "latest",
     "phosphor-react": "^1.4.1",
